storageclass-pv-pvc.yml
apiVersion: v1 
kind: Pod 
metadata: 
   name: pv-pod 
spec: 
   containers: 
      - name: busybox 
        image: busybox 
        command: ['sh', '-c', 'while true; do echo Success! > /output/success.txt; sleep 5; done'] 
        volumeMounts: 
        - name: pv-storage 
          mountPath: /output 
   volumes: 
   - name: pv-storage 
     persistentVolumeClaim: 
       claimName: host-pvc
