init-container.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    app: test-app
spec:
  containers:
  - name: test-con
    image: nginx:1.19.1
    ports:
    - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  selector:
    app: test-app  
  ports:
    - protocol: TCP
      port: 80      # Port that the service will expose
      targetPort: 80 # Port on the pod to forward traffic to
  type: ClusterIP
