depl-svc-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-auth-deployment
spec:
  replicas: 3  # Number of pod replicas
  selector:
    matchLabels:
      app: web-auth  # This should match the labels of the pod template
  template:
    metadata:
      labels:
        app: web-auth  # This label should match the selector
    spec:
      containers:
      - name: web-auth
        image: nginx:1.19.1  # Replace with your desired image
        ports:
        - containerPort: 80  # This should match the targetPort in the service

---

apiVersion: v1
kind: Service
metadata:
  name: web-auth-svc
spec:
  type: ClusterIP
  selector:
    app: web-auth
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-auth-ingress
spec:
  rules:
  - host: test.web-deployment.com  # Added host
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: web-auth-svc
            port:
              number: 80
